--- a/src/western-digital-server.html
+++ b/src/western-digital-server.html
@@ -441,73 +441,33 @@
                                 <div class="wpb_wrapper">
 
                                     <div>
-                                        <p>
-                                            Emby Server can be installed by manually installing one of the packages provided here.
-                                        </p>
+                                        <p><b>Emby Server for Western Digital NAS Manual Installation</b></p>
 
-                                        <div><b class="instructionListHeader">WD dl2100</b></div>
                                         <ol class="instructionList">
-                                            <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-western_digital_dl2100_{version}_x86_64.bin" href="emby-server-western_digital_dl2100_{version}_x86_64.bin">{filename}</a></li>
+                                            <li>
+                                                <div>Download one of the following packages depending on your Western Digital NAS model:</div>
+                                                <ul>
+                                                    <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-western_digital_dl2100_{version}_x86_64.bin" href="emby-server-western_digital_dl2100_{version}_x86_64.bin">My Cloud DL2100</a></li>
+                                                    <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-western_digital_dl4100_{version}_x86_64.bin" href="emby-server-western_digital_dl4100_{version}_x86_64.bin">My Cloud DL4100</a></li>
+                                                    <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-western_digital_pr2100_{version}_x86_64.bin" href="emby-server-western_digital_pr2100_{version}_x86_64.bin">My Cloud PR2100</a></li>
+                                                    <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-western_digital_pr4100_{version}_x86_64.bin" href="emby-server-western_digital_pr4100_{version}_x86_64.bin">My Cloud PR4100</a></li>
+                                                </ul>
+                                            </li>
                                             <li>Install Emby Server using the Western Digital Web interface.</li>
                                             <li>Start Emby Server using the Western Digital Web interface.</li>
                                             <li>Open a web browser to http://localhost:8096</li>
                                         </ol>
 
-                                        <div><b class="instructionListHeader">WD dl4100</b></div>
-                                        <ol class="instructionList">
-                                            <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-western_digital_dl4100_{version}_x86_64.bin" href="emby-server-western_digital_dl4100_{version}_x86_64.bin">{filename}</a></li>
-                                            <li>Install Emby Server using the Western Digital Web interface.</li>
-                                            <li>Start Emby Server using the Western Digital Web interface.</li>
-                                            <li>Open a web browser to http://localhost:8096</li>
-                                        </ol>
 
-                                        <div><b class="instructionListHeader">WD pr2100</b></div>
-                                        <ol class="instructionList">
-                                            <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-western_digital_pr2100_{version}_x86_64.bin" href="emby-server-western_digital_pr2100_{version}_x86_64.bin">{filename}</a></li>
-                                            <li>Install Emby Server using the Western Digital Web interface.</li>
-                                            <li>Start Emby Server using the Western Digital Web interface.</li>
-                                            <li>Open a web browser to http://localhost:8096</li>
-                                        </ol>
+                                        <p><b>Emby Server (BETA) for Western Digital NAS Manual Installation</b></p>
+                                        <p>To participate in Emby Server beta testing, download one of the following packages depending on your Western Digital NAS model:</p>
+                                        <ul>
+                                            <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-western_digital_dl2100_{version}_x86_64.bin" href="emby-server-western_digital_dl2100_{version}_x86_64.bin">My Cloud DL2100</a></li>
+                                            <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-western_digital_dl4100_{version}_x86_64.bin" href="emby-server-western_digital_dl4100_{version}_x86_64.bin">My Cloud DL4100</a></li>
+                                            <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-western_digital_pr2100_{version}_x86_64.bin" href="emby-server-western_digital_pr2100_{version}_x86_64.bin">My Cloud PR2100</a></li>
+                                            <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-western_digital_pr4100_{version}_x86_64.bin" href="emby-server-western_digital_pr4100_{version}_x86_64.bin">My Cloud PR4100</a></li>
+                                        </ul>
 
-                                        <div><b class="instructionListHeader">WD pr4100</b></div>
-                                        <ol class="instructionList">
-                                            <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-western_digital_pr4100_{version}_x86_64.bin" href="emby-server-western_digital_pr4100_{version}_x86_64.bin">{filename}</a></li>
-                                            <li>Install Emby Server using the Western Digital Web interface.</li>
-                                            <li>Start Emby Server using the Western Digital Web interface.</li>
-                                            <li>Open a web browser to http://localhost:8096</li>
-                                        </ol>
-
-                                        <div><b class="instructionListHeader">WD dl2100 - BETA</b></div>
-                                        <ol class="instructionList">
-                                            <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-western_digital_dl2100_{version}_x86_64.bin" href="emby-server-western_digital_dl2100_{version}_x86_64.bin">{filename}</a></li>
-                                            <li>Install Emby Server using the Western Digital Web interface.</li>
-                                            <li>Start Emby Server using the Western Digital Web interface.</li>
-                                            <li>Open a web browser to http://localhost:8096</li>
-                                        </ol>
-
-                                        <div><b class="instructionListHeader">WD dl4100 - BETA</b></div>
-                                        <ol class="instructionList">
-                                            <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-western_digital_dl4100_{version}_x86_64.bin" href="emby-server-western_digital_dl4100_{version}_x86_64.bin">{filename}</a></li>
-                                            <li>Install Emby Server using the Western Digital Web interface.</li>
-                                            <li>Start Emby Server using the Western Digital Web interface.</li>
-                                            <li>Open a web browser to http://localhost:8096</li>
-                                        </ol>
-
-                                        <div><b class="instructionListHeader">WD pr2100 - BETA</b></div>
-                                        <ol class="instructionList">
-                                            <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-western_digital_pr2100_{version}_x86_64.bin" href="emby-server-western_digital_pr2100_{version}_x86_64.bin">{filename}</a></li>
-                                            <li>Install Emby Server using the Western Digital Web interface.</li>
-                                            <li>Start Emby Server using the Western Digital Web interface.</li>
-                                            <li>Open a web browser to http://localhost:8096</li>
-                                        </ol>
-
-                                        <div><b class="instructionListHeader">WD pr4100 - BETA</b></div>
-                                        <ol class="instructionList">
-                                            <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-western_digital_pr4100_{version}_x86_64.bin" href="emby-server-western_digital_pr4100_{version}_x86_64.bin">{filename}</a></li>
-                                            <li>Install Emby Server using the Western Digital Web interface.</li>
-                                            <li>Start Emby Server using the Western Digital Web interface.</li>
-                                            <li>Open a web browser to http://localhost:8096</li>
-                                        </ol>
                                     </div>
                                 </div>
                             </div>
