--- a/src/synology-server.html
+++ b/src/synology-server.html
@@ -440,63 +440,34 @@
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
 
-                                    <div><b class="instructionListHeader">Synology X64</b></div>
+                                    <p><b>Emby Server for Synology NAS Manual Installation</b></p>
+
                                     <ol class="instructionList">
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_x86_64.spk" href="emby-server-synology_{version}_x86_64.spk">{filename}</a></li>
-                                        <li>– Install using the Synology web interface.</li>
-                                        <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
+                                        <li>
+                                            <div>Download one of the following packages depending on your Synology NAS model:</div>
+                                            <ul>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_x86_64.spk" href="emby-server-synology_{version}_x86_64.spk">64-bit NAS</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv8.spk" href="emby-server-synology_{version}_armv8.spk">ARMv8 (x18 Series)</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">ARMv7 (x13 Series, x14 Series (excluding DS414j), DS115j, RS815, and DS216se)</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv7_legacy.spk" href="emby-server-synology_{version}_armv7_legacy.spk">ARMv7 (x15 Series (excluding DS115j and RS815), x16 Series (excluding DS216se), x17 Series, x18 Series, and DS414j)</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">ARMv5</a></li>
+                                            </ul>
+                                        </li>
+                                        <li>Install Emby Server using the Synology Web interface.</li>
+                                        <li>Start Emby Server using the Synology Web interface.</li>
+                                        <li>Open a web browser to http://localhost:8096</li>
                                     </ol>
 
-                                    <div><b class="instructionListHeader">Synology Armv8</b></div>
-                                    <ol class="instructionList">
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv8.spk" href="emby-server-synology_{version}_armv8.spk">{filename}</a></li>
-                                        <li>– Install using the Synology web interface.</li>
-                                        <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
-                                    </ol>
 
-                                    <div><b class="instructionListHeader">Synology Armv7</b></div>
-                                    <ol class="instructionList">
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">{filename}</a></li>
-                                        <li>– Install using the Synology web interface.</li>
-                                        <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
-                                    </ol>
-
-                                    <div><b class="instructionListHeader">Synology Armv5</b></div>
-                                    <ol class="instructionList">
-                                        <li>Install the mono package from SynoCommunity</li>
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">{filename}</a></li>
-                                        <li>– Install using the Synology web interface.</li>
-                                        <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
-                                    </ol>
-
-                                    <div><b class="instructionListHeader">Synology X64 - BETA</b></div>
-                                    <ol class="instructionList">
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_x86_64.spk" href="emby-server-synology_{version}_x86_64.spk">{filename}</a></li>
-                                        <li>– Install using the Synology web interface.</li>
-                                        <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
-                                    </ol>
-
-                                    <div><b class="instructionListHeader">Synology Armv8 - BETA</b></div>
-                                    <ol class="instructionList">
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv8.spk" href="emby-server-synology_{version}_armv8.spk">{filename}</a></li>
-                                        <li>– Install using the Synology web interface.</li>
-                                        <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
-                                    </ol>
-
-                                    <div><b class="instructionListHeader">Synology Armv7 - BETA</b></div>
-                                    <ol class="instructionList">
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">{filename}</a></li>
-                                        <li>– Install using the Synology web interface.</li>
-                                        <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
-                                    </ol>
-
-                                    <div><b class="instructionListHeader">Synology Armv5 - BETA</b></div>
-                                    <ol class="instructionList">
-                                        <li>Install the mono package from SynoCommunity</li>
-                                        <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">{filename}</a></li>
-                                        <li>– Install using the Synology web interface.</li>
-                                        <li>– When the installation is over, launch the Emby Server application on your Synology.</li>
-                                    </ol>
+                                    <p><b>Emby Server (BETA) for Synology NAS Manual Installation</b></p>
+                                    <p>To participate in Emby Server beta testing, download one of the following packages depending on your Synology NAS model:</p>
+                                    <ul>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_x86_64.spk" href="emby-server-synology_{version}_x86_64.spk">64-bit NAS</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv8.spk" href="emby-server-synology_{version}_armv8.spk">ARMv8 (x18 Series)</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">ARMv7 (x13 Series, x14 Series (excluding DS414j), DS115j, RS815, and DS216se)</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv7_legacy.spk" href="emby-server-synology_{version}_armv7_legacy.spk">ARMv7 (x15 Series (excluding DS115j and RS815), x16 Series (excluding DS216se), x17 Series, x18 Series, and DS414j)</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">ARMv5</a></li>
+                                    </ul>
 
                                 </div>
                             </div>
