--- a/src/synology-server.html
+++ b/src/synology-server.html
@@ -444,12 +444,20 @@
 
                                     <ol class="instructionList">
                                         <li>
-                                            <div>Download one of the following packages depending on your Synology NAS model:</div>
+                                            <div>Download one of the following packages depending the <a target="_blank" href="https://github.com/SynoCommunity/spksrc/wiki/Architecture-per-Synology-model">architecture of your Synology NAS</a>:</div>
                                             <ul>
                                                 <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_x86_64.spk" href="emby-server-synology_{version}_x86_64.spk">64-bit NAS</a></li>
                                                 <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv8.spk" href="emby-server-synology_{version}_armv8.spk">ARMv8 (x18 Series)</a></li>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">ARMv7 (x13 Series, x14 Series (excluding DS414j), DS115j, RS815, and DS216se)</a></li>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv7_legacy.spk" href="emby-server-synology_{version}_armv7_legacy.spk">ARMv7 (x15 Series (excluding DS115j and RS815), x16 Series (excluding DS216se), x17 Series, x18 Series, and DS414j)</a></li>
+                                                <li>
+                                                    <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">ARMv7</a> - Supported models:</div>
+                                                    <ul>
+                                                        <li>DS416</li>
+                                                        <li>DS715</li>
+                                                        <li>DS1515</li>
+                                                        <li>DS2015xs</li>
+                                                    </ul>
+                                                </li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_armv7_legacy.spk" href="emby-server-synology-mono_{version}_armv7_legacy.spk">ARMv7 (all other ARMv7 models)</a></li>
                                                 <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">ARMv5</a></li>
                                             </ul>
                                         </li>
@@ -464,8 +472,16 @@
                                     <ul>
                                         <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_x86_64.spk" href="emby-server-synology_{version}_x86_64.spk">64-bit NAS</a></li>
                                         <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv8.spk" href="emby-server-synology_{version}_armv8.spk">ARMv8 (x18 Series)</a></li>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">ARMv7 (x13 Series, x14 Series (excluding DS414j), DS115j, RS815, and DS216se)</a></li>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv7_legacy.spk" href="emby-server-synology_{version}_armv7_legacy.spk">ARMv7 (x15 Series (excluding DS115j and RS815), x16 Series (excluding DS216se), x17 Series, x18 Series, and DS414j)</a></li>
+                                        <li>
+                                            <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">ARMv7</a> - Supported models:</div>
+                                            <ul>
+                                                <li>DS416</li>
+                                                <li>DS715</li>
+                                                <li>DS1515</li>
+                                                <li>DS2015xs</li>
+                                            </ul>
+                                        </li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_armv7_legacy.spk" href="emby-server-synology-mono_{version}_armv7_legacy.spk">ARMv7 (all other ARMv7 models)</a></li>
                                         <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">ARMv5</a></li>
                                     </ul>
 
