--- a/src/synology-server.html
+++ b/src/synology-server.html
@@ -451,6 +451,7 @@
                                                 <li>
                                                     <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">ARMv7</a> - Supported models:</div>
                                                     <ul>
+                                                        <li>DS216play</li>
                                                         <li>DS416</li>
                                                         <li>DS715</li>
                                                         <li>DS1515</li>
@@ -476,6 +477,7 @@
                                         <li>
                                             <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">ARMv7</a> - Supported models:</div>
                                             <ul>
+                                                <li>DS216play</li>
                                                 <li>DS416</li>
                                                 <li>DS715</li>
                                                 <li>DS1515</li>
